--- a/day8/responsiveWebDesign.html
+++ b/day8/responsiveWebDesign.html
@@ -16,7 +16,7 @@
         <h1>
 			<i>Welcome to my website</i>
         </h1>
-        <div class="col-6 col-s-9">
+        <section class="col-6 col-s-9">
         <h2><b><u>About</u></b></h2>
         <p>Week 1,
         <b><br>this is where I</b>
@@ -27,15 +27,13 @@
             <br>
             and all these pages are products of experimentation.
             </p>
-        </div>
-            <div class="col-2 col-s-12">
-                <div class="aside">
+        </section>
+            <section class="col-2 col-s-12">
         <h2><b><u>16 years old</u></b></h2>
         <p>
             I hope im an ok driver. I've been too busy to study yet
         </p>
-    </div>
-</div>
+    </section>
 
            <br>
            <br>
